// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`empty-with-no-trailing-newline.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================

=====================================output=====================================

================================================================================
`;

exports[`empty-with-trailing-newline.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================


=====================================output=====================================

================================================================================
`;

exports[`end-of-line-last.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a bare string to hightlight eol last handling

=====================================output=====================================
a bare string to hightlight eol last handling
================================================================================
`;
